App Icon Launch Screen Row Height

--- a/MyPlaces#5/Base.lproj/Main.storyboard
+++ b/MyPlaces#5/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Root View Controller-->
+        <!--My places-->
         <scene sceneID="8z7-Qk-fN6">
             <objects>
                 <tableViewController id="54F-oa-yRG" customClass="MainViewController" customModule="MyPlaces_5" customModuleProvider="target" sceneMemberID="viewController">
@@ -30,7 +30,7 @@
                             <outlet property="delegate" destination="54F-oa-yRG" id="hJ7-IS-VNl"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="l41-KT-1Rp"/>
+                    <navigationItem key="navigationItem" title="My places" id="l41-KT-1Rp"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="D6d-9f-b6A" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -43,6 +43,9 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="6Gk-l6-LdU">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" name="SnellRoundhand-Bold" family="Snell Roundhand" pointSize="24"/>
+                        </textAttributes>
                     </navigationBar>
                     <connections>
                         <segue destination="54F-oa-yRG" kind="relationship" relationship="rootViewController" id="2Cy-L5-mWG"/>
