--- a/MyPlaces#5/Base.lproj/Main.storyboard
+++ b/MyPlaces#5/Base.lproj/Main.storyboard
@@ -11,18 +11,74 @@
         <scene sceneID="8z7-Qk-fN6">
             <objects>
                 <tableViewController id="54F-oa-yRG" customClass="MainViewController" customModule="MyPlaces_5" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="UpV-DE-OIf">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="85" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="UpV-DE-OIf">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="r4b-tT-wCE">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="r4b-tT-wCE" customClass="CustomTableViewCell" customModule="MyPlaces_5" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="85"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="r4b-tT-wCE" id="8YV-en-wnD">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="85"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0dS-BM-nde">
+                                            <rect key="frame" x="15" y="10" width="65" height="65"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="65" id="eVB-0M-NXo"/>
+                                                <constraint firstAttribute="width" constant="65" id="jpt-ft-lRI"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9TY-wX-ZhQ">
+                                            <rect key="frame" x="95" y="9" width="299" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="oQx-mn-eFo"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="18"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8NB-K4-lam">
+                                            <rect key="frame" x="95" y="35" width="315" height="18"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="18" id="vBs-J6-5r2"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="15"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dSd-I1-94L">
+                                            <rect key="frame" x="95" y="54" width="299" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="n0W-Nm-oCk"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="13"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="dSd-I1-94L" firstAttribute="leading" secondItem="0dS-BM-nde" secondAttribute="trailing" constant="15" id="3PR-Eg-2MQ"/>
+                                        <constraint firstItem="8NB-K4-lam" firstAttribute="trailing" secondItem="8YV-en-wnD" secondAttribute="trailingMargin" constant="16" id="CyD-WE-nY3"/>
+                                        <constraint firstItem="9TY-wX-ZhQ" firstAttribute="top" secondItem="8YV-en-wnD" secondAttribute="top" constant="9" id="M8J-S4-Q35"/>
+                                        <constraint firstItem="9TY-wX-ZhQ" firstAttribute="leading" secondItem="0dS-BM-nde" secondAttribute="trailing" constant="15" id="VdR-Ip-mvn"/>
+                                        <constraint firstAttribute="trailing" secondItem="dSd-I1-94L" secondAttribute="trailing" constant="20" symbolic="YES" id="Wpo-Tl-AhA"/>
+                                        <constraint firstItem="0dS-BM-nde" firstAttribute="centerY" secondItem="8YV-en-wnD" secondAttribute="centerY" id="YaZ-CA-OMc"/>
+                                        <constraint firstItem="0dS-BM-nde" firstAttribute="leading" secondItem="8YV-en-wnD" secondAttribute="leading" constant="15" id="d15-gu-0ha"/>
+                                        <constraint firstAttribute="bottom" secondItem="dSd-I1-94L" secondAttribute="bottom" constant="10" id="jnH-1X-UFg"/>
+                                        <constraint firstItem="dSd-I1-94L" firstAttribute="top" secondItem="8NB-K4-lam" secondAttribute="bottom" constant="1" id="ov8-f5-Wu4"/>
+                                        <constraint firstAttribute="trailing" secondItem="9TY-wX-ZhQ" secondAttribute="trailing" constant="20" symbolic="YES" id="tC4-uR-7pf"/>
+                                        <constraint firstItem="8NB-K4-lam" firstAttribute="leading" secondItem="0dS-BM-nde" secondAttribute="trailing" constant="15" id="w2Z-Nu-ePk"/>
+                                        <constraint firstItem="8NB-K4-lam" firstAttribute="top" secondItem="9TY-wX-ZhQ" secondAttribute="bottom" constant="5" id="zsL-QO-jqQ"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="imageOfPlace" destination="0dS-BM-nde" id="PeM-yl-bFy"/>
+                                    <outlet property="locationLabel" destination="8NB-K4-lam" id="9yp-Xc-bWR"/>
+                                    <outlet property="nameLabel" destination="9TY-wX-ZhQ" id="FeA-iD-Vil"/>
+                                    <outlet property="typeLabel" destination="dSd-I1-94L" id="vj9-wz-pxh"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -34,7 +90,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="D6d-9f-b6A" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-17" y="9"/>
+            <point key="canvasLocation" x="-17.39130434782609" y="8.7053571428571423"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="2DM-2L-GEL">
